infrastructure/kubernetes/base/service-hcx-apis.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcx-apis
  labels:
    app: hcx-apis
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: hcx-apis
