infrastructure/kubernetes/base/service-hcx-onboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcx-onboard
  labels:
    app: hcx-onboard
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: hcx-onboard
